# panchi

./: .gitignore  CONTRIBUTE.md  CONTRIBUTING.md  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: mathrix-test.yml  panchi-publish.yml
mathrix/: __init__.py  factories.py  operations.py
mathrix/algorithms/: __init__.py  reductions.py  results.py  row_operations.py
mathrix/matrix_algorithms/: __init__.py  reductions.py  row_operations.py
mathrix/primitives/: __init__.py  matrix.py  vector.py
mathrix/visualizations/: __init__.py  plot_2d.py
mathrix/visualizations/animators/: animator_2d.py
mathrix/visualizations/backends/: __init__.py
panchi/: __init__.py
panchi/algorithms/: __init__.py  decompositions.py  reductions.py  results.py  row_operations.py
panchi/primitives/: __init__.py  factories.py  matrix.py  vector_operations.py
panchi/visualizations/: __init__.py
panchi/visualizations/animators/: animator_2d.py
panchi/visualizations/backends/: __init__.py  manim_2d.py  matplotlib_2d.py
src/models/: matrix.py
src/primitives/: matrix.py  vector.py
tests/: lin_alg_tests.py  test_decompositions.py  test_matrix.py  test_matrix_algorithms.py  test_operations.py  test_vector.py
