[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mathrix"
version = "0.1.0"
description = "A Python-native linear algebra library for learning, experimentation, and visual intuition"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = [
  "linear algebra",
  "mathematics",
  "education",
  "vectors",
  "matrices",
  "visualization",
]
authors = [
  { name = "Gustavo Galvao e Silva", email = "gustavo.galvaoesilva@gmail.com" },
]
maintainers = [
  { name = "Gustavo Galvao e Silva", email = "gustavo.galvaoesilva@gmail.com" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Education",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Education",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Typing :: Typed",
]

# Core dependencies - ALWAYS installed
dependencies = ["matplotlib>=3.5.0"]

[project.urls]
Homepage = "https://github.com/Gustavo-Galvao-e-Silva/mathrix"
Documentation = "https://github.com/Gustavo-Galvao-e-Silva/mathrix#readme"
Repository = "https://github.com/Gustavo-Galvao-e-Silva/mathrix"
"Bug Tracker" = "https://github.com/Gustavo-Galvao-e-Silva/mathrix/issues"
Changelog = "https://github.com/Gustavo-Galvao-e-Silva/mathrix/releases"

# Optional dependencies - installed with extras
[project.optional-dependencies]
# For production-quality video output
manim = ["manim>=0.18.0"]

# For development
dev = [
  "pytest>=7.0",
  "pytest-cov>=4.0",
  "black>=23.0",
  "ruff>=0.1.0",
  "mypy>=1.0",
]

# For testing only
test = ["pytest>=7.0", "pytest-cov>=4.0"]

# Everything (for contributors)
all = ["mathrix[manim,dev]"]

[tool.setuptools]
packages = [
  "mathrix",
  "mathrix.primitives",
  "mathrix.visualizations",
  "mathrix.visualizations.backends",
]

[tool.setuptools.package-data]
mathrix = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
  "--ignore=tests/test_manim.py",
  "--ignore=tests/test_matplot.py",
  "--strict-markers",
  "--strict-config",
  "-ra",
]

[tool.black]
line-length = 88
target-version = ["py310"]
include = '\.pyi?$'

[tool.ruff]
line-length = 88
target-version = "py310"
select = [
  "E",  # pycodestyle errors
  "W",  # pycodestyle warnings
  "F",  # pyflakes
  "I",  # isort
  "B",  # flake8-bugbear
  "C4", # flake8-comprehensions
  "UP", # pyupgrade
]
ignore = [
  "E501", # line too long, handled by black
  "B008", # do not perform function calls in argument defaults
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
