[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "panchi"
version = "0.1.0a1"
description = "A Python-native linear algebra library for learning, experimentation, and visual intuition"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = [
  "linear algebra",
  "mathematics",
  "education",
  "vectors",
  "matrices",
  "visualization",
]
authors = [
  { name = "Gustavo Galvao e Silva", email = "gustavo.galvaoesilva@gmail.com" },
]
maintainers = [
  { name = "Gustavo Galvao e Silva", email = "gustavo.galvaoesilva@gmail.com" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Education",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Education",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Typing :: Typed",
]

dependencies = ["matplotlib>=3.5.0"]

[project.urls]
Homepage = "https://github.com/Gustavo-Galvao-e-Silva/panchi"
Documentation = "https://github.com/Gustavo-Galvao-e-Silva/panchi#readme"
Repository = "https://github.com/Gustavo-Galvao-e-Silva/panchi"
"Bug Tracker" = "https://github.com/Gustavo-Galvao-e-Silva/panchi/issues"
Changelog = "https://github.com/Gustavo-Galvao-e-Silva/panchi/releases"

[project.optional-dependencies]
manim = ["manim>=0.18.0"]
docs = ["mkdocs-material>=9.0", "mkdocstrings[python]>=0.24"]

dev = [
  "pytest>=7.0",
  "pytest-cov>=4.0",
  "black>=23.0",
  "ruff>=0.1.0",
  "mypy>=1.0",
]

test = ["pytest>=7.0", "pytest-cov>=4.0"]

all = ["panchi[manim,dev]"]

[tool.setuptools]
packages = [
  "panchi",
  "panchi.primitives",
  "panchi.algorithms",
  "panchi.visualizations",
  "panchi.visualizations.backends",
]

[tool.setuptools.package-data]
panchi = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
  "--ignore=tests/test_manim.py",
  "--ignore=tests/test_matplot.py",
  "--strict-markers",
  "--strict-config",
  "-ra",
]

[tool.black]
line-length = 88
target-version = ["py310"]
include = '\.pyi?$'

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501", "B008"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
